# investmentsBI

./: .gitignore  01-design-and-architecture.docx  01-design-and-architecture.md  02-build-brief.md  docker-compose.dev.yml  repository.json
.claude/: pr_body.json  settings.local.json
addon/: Dockerfile  README.md  config.yaml  run.sh
addon/backend/: Dockerfile.dev  dev_seed.py  pyproject.toml
addon/backend/alembic/versions/: 0002_m2_tables.py  0003_m3_position_snapshot.py  0004_m5_schema.py  0005_m6_source_urls.py  0006_m6_vanguard_professional_url.py  0007_m7_schema.py  0008_m7_fixups.py  0009_m8_sector_normalise.py
addon/backend/app/: config.py  main.py  scheduler.py
addon/backend/app/aggregator/: position_snapshot.py
addon/backend/app/api/: admin.py  allocation.py  drill.py  health.py  timeseries.py
addon/backend/app/db/: ghostfolio.py  ghostfolio_session.py  reporting.py  reporting_session.py
addon/backend/app/fetchers/: base.py  ecb_fx.py  hsbc.py  ishares.py  vanguard.py
addon/backend/app/frontend/: app.js  index.html  style.css  treemap.js
addon/backend/app/jobs/: aggregate_allocation.py  base.py  etf_holdings.py  ishares_holdings.py  market_cap_enrichment.py  position_snapshot.py
addon/backend/tests/: test_ecb_fx_fetcher.py  test_ishares_fetcher.py  test_position_snapshot.py  test_vanguard_parse.py
addon/backend/tests/fixtures/: ecb_daily.xml  iwda_sample.csv
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  logging_config.py  main.py  scheduler.py
docs/: ghostfolio-schema-notes.md
(+10 files in other folders)
