[project]
name = "investmentsbi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "psycopg2-binary>=2.9.0",
    "yfinance>=0.2.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
